Fix sliding navigation
[#555]

--- a/index.html
+++ b/index.html
@@ -38,18 +38,23 @@
 
         .nav-link::before {
             content: "UaU ";
+            margin-right: -2px;
         }
+
         .nav-link:hover::before {
             content: "0_0 ";
+            margin-right: 4px;
         }
 
         .nav-link {
             margin-right: 10px;
         }
+
         .nav-link a {
             text-decoration: none;
             color: #9a9afd;
         }
+
         .nav-link a:hover {
             color: aqua;
             transition: 0.5s ease-in;
@@ -59,6 +64,7 @@
             color: red;
             margin-top: 10px;
         }
+
         .hobby-hate::before {
             content: ".!. ";
         }
@@ -67,6 +73,7 @@
             color: violet;
             margin-top: 10px;
         }
+
         .hobby-love::before {
             content: "<3 ";
             color: red;
