Fix bad css style
[#555]

--- a/index.html
+++ b/index.html
@@ -37,13 +37,15 @@
         }
 
         .nav-link::before {
-            content: "UaU ";
-            margin-right: -2px;
+            content: "UaU";
+            margin-right: 5px;
+            min-width: 30px;
+            display: inline-block;
         }
 
         .nav-link:hover::before {
-            content: "0_0 ";
-            margin-right: 4px;
+            content: "0_0";
+            margin-right: 5px;
         }
 
         .nav-link {
