Fix second layout
[#562]

--- a/SecondTask/index.html
+++ b/SecondTask/index.html
@@ -8,17 +8,17 @@
 </head>
 <body>
 <section class="delivery-status">
-    <ol class="status-list">
-        <li>
+    <ol class="delivery-status-list">
+        <li class="delivery-status-not-active">
             Заказ
         </li>
-        <li>
+        <li class="delivery-status-not-active">
             Подтверждение
         </li>
-        <li class="status-active">
+        <li class="delivery-status-not-active delivery-status-active">
             Оплата
         </li>
-        <li>
+        <li class="delivery-status-not-active">
             Доставка
         </li>
     </ol>
