--- a/FourthTask/index.html
+++ b/FourthTask/index.html
@@ -8,25 +8,25 @@
 </head>
 <body>
 <ul class="wonders-list">
-    <li class="list-section">
+    <li class="wonders-list-item">
         Пирамида Хеопса
     </li>
-    <li class="list-section">
+    <li class="wonders-list-item">
         Висячие сады Семирамиды
     </li>
-    <li class="list-section">
+    <li class="wonders-list-item">
         Статуя Зевса в Олимпии
     </li>
-    <li class="list-section">
+    <li class="wonders-list-item">
         Храм Артемиды в Эфесе
     </li>
-    <li class="list-section">
+    <li class="wonders-list-item">
         Мавзолей в Галикарнасе
     </li>
-    <li class="list-section">
+    <li class="wonders-list-item">
         Колосс Родосский
     </li>
-    <li class="list-section">
+    <li class="wonders-list-item">
         Александрийский маяк
     </li>
 </ul>
