Fix code style into third layout
[#562]

--- a/ThirdTask/index.html
+++ b/ThirdTask/index.html
@@ -8,29 +8,29 @@
 </head>
 <body>
 <div class="weather-shell">
-    <section class="shell-section">
+    <section class="weather-shell-item">
         <h3>
             ВТ
         </h3>
-        <img src="weather-clear.png">
+        <img src="weather-clear.png" alt="Солнце">
         <h4>
             Солнечно
         </h4>
     </section>
-    <section class="shell-section">
+    <section class="weather-shell-item">
         <h3>
             СР
         </h3>
-        <img src="weather-overcast.png">
+        <img src="weather-overcast.png" alt="Облака">
         <h4>
             Облачно
         </h4>
     </section>
-    <section class="shell-section">
+    <section class="weather-shell-item">
         <h3>
             ЧТ
         </h3>
-        <img src="weather-showers.png">
+        <img src="weather-showers.png" alt="Дождь">
         <h4>
             Дождливо
         </h4>
