--- a/SecondTask/index.html
+++ b/SecondTask/index.html
@@ -9,16 +9,16 @@
 <body>
 <section class="delivery-status">
     <ol class="delivery-status-list">
-        <li class="delivery-status-not-active">
+        <li class="delivery-status-default">
             Заказ
         </li>
-        <li class="delivery-status-not-active">
+        <li class="delivery-status-default">
             Подтверждение
         </li>
-        <li class="delivery-status-not-active delivery-status-active">
+        <li class="delivery-status-default delivery-status-active">
             Оплата
         </li>
-        <li class="delivery-status-not-active">
+        <li class="delivery-status-default">
             Доставка
         </li>
     </ol>
