Revert "Rename default style-class"
This reverts commit 1b642531e663faa654b7772ed2827c2a5f84f0a9.

--- a/SecondTask/index.html
+++ b/SecondTask/index.html
@@ -9,16 +9,16 @@
 <body>
 <section class="delivery-status">
     <ol class="delivery-status-list">
-        <li class="delivery-status-default">
+        <li class="delivery-status-not-active">
             Заказ
         </li>
-        <li class="delivery-status-default">
+        <li class="delivery-status-not-active">
             Подтверждение
         </li>
-        <li class="delivery-status-default delivery-status-active">
+        <li class="delivery-status-not-active delivery-status-active">
             Оплата
         </li>
-        <li class="delivery-status-default">
+        <li class="delivery-status-not-active">
             Доставка
         </li>
     </ol>
